# michi

./: .env.example  .gitignore  API_TESTING.md  AUTH_IMPLEMENTATION.md  Cargo.toml  DEPLOYMENT_QUICK_START.md  MESSAGING_FEATURES.md  MIGRATION_GUIDE.md  PRODUCTION_READY_CHANGES.md  PROFILE_UPDATE_FIX.md  REACT_NATIVE_MIGRATION_COMPLETE.md  README_DEPLOYMENT.md  SETUP_COMPLETE.md  START_HERE.md  privacy-policy.html  railway.toml
RustMemeApp/RustMemeApp/: ContentView.swift  RustMemeAppApp.swift
RustMemeApp/RustMemeApp.xcodeproj/: project.pbxproj
RustMemeApp/RustMemeAppTests/: RustMemeAppTests.swift
RustMemeApp/RustMemeAppUITests/: RustMemeAppUITests.swift  RustMemeAppUITestsLaunchTests.swift
RustMemeApp/SocialMedia/SocialMedia/: ContentView.swift  SocialMediaApp.swift
RustMemeApp/SocialMedia/SocialMedia.xcodeproj/: project.pbxproj
RustMemeApp/SocialMedia/SocialMediaTests/: SocialMediaTests.swift
RustMemeApp/SocialMedia/SocialMediaUITests/: SocialMediaUITests.swift  SocialMediaUITestsLaunchTests.swift
database/: README.md  schema.sql  setup.sh
frontend/: .env.example
ios/: .gitignore  APPLE_SIGNIN_FIX.md  APP_STORE_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  Info.plist  MESSAGING_IMPLEMENTATION.md  MESSAGING_TESTING_GUIDE.md  Package.swift  README.md  REAL_AUTH_IMPLEMENTATION.md  SETUP.md  WEB3AUTH_SETUP.md
ios/Rustaceaans/: GoogleService-Info.plist
mobile/: .env.example  .gitignore  App.tsx  QUICKSTART.md  README.md  app.json  package-lock.json  package.json  setup.sh  tsconfig.json
src/: auth.rs  db.rs  main.rs  storage.rs
(+58 files in other folders)
