[package]
name = "Rust_meme_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.0.4", features = ["postgres", "chrono", "sqlite", "r2d2"] }
dotenv = "0.15.0"
bcrypt = "0.15.0"
r2d2 = "0.8.9"
actix-web = "4.3.0"
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-files = "0.6.2"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
reqwest = { version = "0.11", features = ["multipart"] }